Github you stuuupid why you no upload styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				I play the trombone and the piano <br>
 				</p>
 				<p>
-				Feel free to check out some things I've worked on!
+				While you're here, why not check out some things I've worked on!
 			</div>
 		</div>
 
