Ported projects over to ther own repositories

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="hoverGrow project">
 				<img src="assets/ball.png" class="projectPic">
 				<div class="projectTitle">Soccer Game</div>
-				<a target="_blank" href="http://ianlai.ca/soccer">	
+				<a target="_blank" href="http://ianlai.ca/Soccer-Game">	
 					<div class="overlay">A simple game with a basic physics engine I built from scratch, based on the Facebook Messenger soccer game. This was one of my first Javascript projects.
 				</div>
 				</a>
@@ -56,7 +56,7 @@
 			<div class="hoverGrow project">
 				<img src="assets/music.png" class="projectPic">
 				<div class="projectTitle">Ear Training Tool</div>
-				<a target="_blank" href="http://ianlai.ca/eartraining">
+				<a target="_blank" href="http://ianlai.ca/EarTraining">
 					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
 				</a>
 			</div>
