Added MeNoLikey as a project

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
 				</a>
 			</div>
+
+			<div class="hoverGrow project">
+				<img src="assets/menolikey.png" class="projectPic">
+				<div class="projectTitle">Me No Likey</div>
+				<a target="_blank" href="https://github.com/snipower/MeNoLikey">	
+					<div class="overlay">A Chrome Extension that simply removes the 'Like' button from all Facebook pages. This was my first venture into the Chrome Extension world.
+				</div>
+				</a>
+			</div>
 		</div>
 
 		<div class="contentBox">
