--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div id="projectsAnchor" class="contentBox">
 			<div class="hoverGrow project">
 				<img src="assets/graph.png" class="projectPic">
-				<div class="projectTitle">GraphEz</div>
+				<div class="projectTitle">GraphHax</div>
 				<a target="_blank" href="http://jonahdlin.com/graph">
 					<div class="overlay">A graph theory tool I built in collaboration with Jonah Dlin. It utilises a tool based system to manipulate the graph. Canvas was used to display the nodes and edges, and Javascript and jQuery were used for the logic.</div>
 				</a>
