Added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	Well aren't you curious?
 	-->
 	<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="Hi, I'm Ian">
+	<meta name="keywords" content="Ian Lai, Software Developer, Waterloo, Web Developer, Computer Science Student">
+	<meta name="author" content="Ian Lai">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="main.js"></script>
   	<script src="analytics.js"></script>
@@ -92,7 +96,7 @@
 		</div>
 
 		<div class="contentBox flexDown">
-			<div class="text">Finally, here's my resume! I'm currently looking for Co-op positions for September 2017 :) </div>
+			<div class="text">Finally, here's my resume!</div>
 			<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
 		</div>
 
