--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				Welcome to my website. I'm at your service, sir (or madam). Here's a bit about me!
 				</p>
 				<p>
-				I study Computer Science at the University of Waterloo <br>
+				I study <span class="pink">Computer Science</span> at the University of Waterloo<br>
 				I am in my 2B term <br> 
-				I code things! <br>
-				I coach a recreational dragonboat team at the University <br>
+				I program things! <br>
+				I coach a recreational dragonboat team<br>
 				I have a first dan black belt in Taekwondo <br>
-				I am a huge fan of Hamilton and Les Mis <br>
+				I listen to Hamilton and Les Mis <br>
 				I play the trombone and the piano <br>
 				</p>
 				<p>
@@ -72,7 +72,7 @@
 				<img src="assets/menolikey.png" class="projectPic">
 				<div class="projectTitle">Me No Likey</div>
 				<a target="_blank" href="https://github.com/snipower/MeNoLikey">	
-					<div class="overlay">A Chrome Extension that removes the 'Like' button from all Facebook pages. This was my first venture into the Chrome Extension world.
+					<div class="overlay">A Chrome Extension that removes the 'Like' button from all Facebook pages.
 				</div>
 				</a>
 			</div>
@@ -102,7 +102,7 @@
 
 		<div id="topBox">
 			<a href="#top">
-				<img id="topButton" class="hoverGrow"src="assets/backtotop.png">
+				<img id="topButton" class="hoverGrow" src="assets/backtotop.png">
 			</a>
 		</div>
 	</body>
