Updated soccer game name

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 			<div class="hoverGrow project">
 				<img src="assets/ball.png" class="projectPic">
-				<div class="projectTitle">Soccer Game</div>
-				<a target="_blank" href="http://ianlai.ca/Soccer-Game">	
+				<div class="projectTitle">Juggle</div>
+				<a target="_blank" href="http://ianlai.ca/juggle">	
 					<div class="overlay">A juggling game with a basic physics engine I built from scratch, based on the Facebook Messenger soccer game. This was one of my first Javascript projects.
 				</div>
 				</a>
