Updated links to work with new github account name

--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@
 		<div id="aboutmeBox" class="contentBox">
 			<div class="text">
 				<p>
-				Welcome to my website. I'm at your service, sir (or madam). Here's a bit about me!
+				Welcome to my website. Here's a bit about me!
 				</p>
 				<p>
 				I study <span class="pink">Computer Science</span> at the University of Waterloo<br>
-				I am in my 2B term <br> 
-				I program things! <br>
+				I am in my 3A term <br> 
+				I code things! <br>
 				I coach a recreational dragonboat team<br>
 				I have a first dan black belt in Taekwondo <br>
 				I listen to Hamilton and Les Mis <br>
-				I play the trombone and the piano <br>
 				</p>
 				<p>
 				While you're here, why not check out some things I've worked on!
@@ -54,7 +53,7 @@
 			<div class="hoverGrow project">
 				<img src="assets/ball.png" class="projectPic">
 				<div class="projectTitle">Juggle</div>
-				<a target="_blank" href="http://ianlai.ca/juggle">	
+				<a target="_blank" href="https://ianlai.ca/juggle">	
 					<div class="overlay">A juggling game with a basic physics engine I built from scratch, based on the Facebook Messenger soccer game. This was one of my first Javascript projects.
 				</div>
 				</a>
@@ -63,7 +62,7 @@
 			<div class="hoverGrow project">
 				<img src="assets/music.png" class="projectPic">
 				<div class="projectTitle">Ear Training Tool</div>
-				<a target="_blank" href="http://ianlai.ca/EarTraining">
+				<a target="_blank" href="https://ianlai.ca/EarTraining">
 					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
 				</a>
 			</div>
@@ -71,7 +70,7 @@
 			<div class="hoverGrow project">
 				<img src="assets/menolikey.png" class="projectPic">
 				<div class="projectTitle">Me No Likey</div>
-				<a target="_blank" href="https://github.com/snipower/MeNoLikey">	
+				<a target="_blank" href="https://github.com/iangitscode/MeNoLikey">	
 					<div class="overlay">A Chrome Extension that removes the 'Like' button from all Facebook pages.
 				</div>
 				</a>
@@ -80,7 +79,7 @@
 
 		<div class="contentBox flexDown">
 			<div class="text">If you want to see how any of these work, all the code is available on Github</div>
-			<a href="https://github.com/snipower" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
+			<a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
 		</div>
 
 		<div id="contactAnchor" class="contentBox">
