Cleaned up contact links

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				</p>
 				<p>
 				I study <span class="pink">Computer Science</span> at the University of Waterloo<br>
-				I am in my 3A term <br> 
+				I am in my 3B term <br> 
 				I code things! <br>
 				I coach a recreational dragonboat team<br>
 				I have a first dan black belt in Taekwondo <br>
-				I listen to Hamilton and Les Mis <br>
+				I love listening to musicals! <br>
 				</p>
 				<p>
-				While you're here, why not check out some things I've worked on!
+				Here are a few things that I've worked on!
 			</div>
 		</div>
 
@@ -63,7 +63,7 @@
 				<img src="assets/music.png" class="projectPic">
 				<div class="projectTitle">Ear Training Tool</div>
 				<a target="_blank" href="https://ianlai.ca/EarTraining">
-					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
+					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. </div>
 				</a>
 			</div>
 
@@ -77,26 +77,17 @@
 			</div>
 		</div>
 
-		<div class="contentBox flexDown">
-			<div class="text">If you want to see how any of these work, all the code is available on Github</div>
-			<a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
-		</div>
-
 		<div id="contactAnchor" class="contentBox">
 			<p class="text">
-				If you're interested in reaching out, feel free to use any of the following...
+				If you're looking for a solid dev, check out the following:
 			</p>
 		</div>
 
 		<div id="contactBox" class="contentBox">
-				<a href="https://www.facebook.com/ian.lai.560" target="_blank"><img src="assets/bw_facebook.png" class="hoverGrow contactPic"></a>
-				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin_bw.png" class="hoverGrow contactPic"></a>
+				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin.png" class="hoverGrow contactPic"></a>
+        <a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
 				<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="hoverGrow contactPic"></a>	
-		</div>
-
-		<div class="contentBox flexDown">
-			<div class="text">Finally, here's my resume!</div>
-			<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
+        <a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
 		</div>
 
 		<div id="topBox">
