--- a/index.html
+++ b/index.html
@@ -17,31 +17,47 @@
 	</head>
 	<body> 
 		<div id="top"></div>
-		<p class="title">Hi, I'm Ian.</p>
-		<nav id="buttonContainer">
-			<a class="hoverGrow button" href="#aboutmeBox">About Me</a>
-			<a class="hoverGrow button" href="#projectsAnchor">Projects</a>
-			<a class="hoverGrow button" href="#contactAnchor">Contact Me</a>
-		</nav>
+		<div id = "titleContentBox"class="contentBox">
+			<div class="title">Hi, I'm Ian.</div>
+			<nav id="buttonContainer">
+				<a class="hoverGrow button" href="#aboutmeBox">About Me</a>
+				<a class="hoverGrow button" href="#projectsAnchor">Projects</a>
+				<a class="hoverGrow button" href="#contactAnchor">Contact Me</a>
+			</nav>
+		</div>
 		<div id="aboutmeBox" class="contentBox">
 			<div class="text">
 				<p>
 				Welcome to my website. Here's a bit about me!
 				</p>
 				<p>
-				I study <span class="pink">Computer Science</span> at the University of Waterloo<br>
+				I study <span class="pink">Computer Science </span> at the University of Waterloo<br>
 				I am in my 3B term <br> 
-				I code things! <br>
-				I coach a recreational dragonboat team<br>
+				I coach a recreational dragonboat team <br>
 				I have a first dan black belt in Taekwondo <br>
 				I love listening to musicals! <br>
 				</p>
 				<p>
-				Here are a few things that I've worked on!
 			</div>
 		</div>
 
 		<div id="projectsAnchor" class="contentBox">
+			<div class="hoverGrow project">
+				<div class="projectPic titleAsPicture"> OS/161 </div>
+				<div class="projectTitle">OS/161 Kernel</div>
+				<a target="_blank" href="http://os161.eecs.harvard.edu/">
+					<div class="overlay">OS/161 is a teaching operating system written in C for the MIPS system. I implemented several crucial kernel components, including synchronization primitives, system calls, support for multithreading and multiprocessing, and virtual memory.</div>
+				</a>
+			</div>
+
+			<div class="hoverGrow project">
+				<div class="projectPic titleAsPicture"> WLP4 </div>
+				<div class="projectTitle">WLP4 Compiler</div>
+				<a target="_blank" href="https://www.student.cs.uwaterloo.ca/~cs241/wlp4/WLP4.html">
+					<div class="overlay">A compiler written in C++ that translates WLP4, a subset of C++, to MIPS machine code. This compiler supports types, pointers and a heap, a stack, functions, conditional statements, and loops.</div>
+				</a>
+			</div>
+
 			<div class="hoverGrow project">
 				<img src="assets/graph.png" class="projectPic">
 				<div class="projectTitle">GraphHax</div>
@@ -78,22 +94,19 @@
 		</div>
 
 		<div id="contactAnchor" class="contentBox">
-			<p class="text">
-				If you're looking for a solid dev, check out the following:
-			</p>
-		</div>
-
-		<div id="contactBox" class="contentBox">
+			<div class="text">
+				I'm looking for internships for Summer 2019. If you have work for me, let me know!
+			</div>
+			<div class="contactLinks">
 				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin.png" class="hoverGrow contactPic"></a>
-        <a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
+	        	<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
 				<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="hoverGrow contactPic"></a>	
-        <a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
-		</div>
-
-		<div id="topBox">
+	        	<a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
+	        </div>
 			<a href="#top">
 				<img id="topButton" class="hoverGrow" src="assets/backtotop.png">
 			</a>
+		</div>
 		</div>
 	</body>
 </html>
