--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	Well aren't you curious?
 	-->
 	<head>
+
 		<meta charset="UTF-8">
 		<meta name="description" content="Hi, I'm Ian">
 		<meta name="keywords" content="Ian Lai, Software Developer, Waterloo, Web Developer, Computer Science Student">
@@ -49,6 +50,16 @@
 				<p class="text">Here are some things that I'm proud of! </p>
 				<div class="projects">
 					
+          <div class="hoverGrow project">
+            <img src="assets/cah.png" class="opaque projectPic">
+            <div class="projectTitle">Cards Against Humanity</div>
+            <a target="_blank" href="https://notcardsagainsthumanity.herokuapp.com/">
+              <div class="overlay">
+                An online, simple to use Cards Against Humanity game built in Angular and NodeJS. It can run several games concurrently, joinable through a room code. Playable on desktop or mobile, this clone provides easy access to a classic party game. 
+              </div>
+            </a>
+          </div>
+
 					<div class="hoverGrow project">
 						<img src="assets/pokeball.PNG" class="opaque projectPic">
 						<div class="projectTitle">Pokemon TCG Draft</div>
