Updated aboutme and projects

--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
 			<div id="aboutmeBox" class="contentBox">
 				<div class="text">
 					<p>
-					Welcome to my website. Here's a bit about me!
+					Welcome to my website! 
 					</p>
 					<p>
-					I study <span class="pink">Computer Science </span> at the University of Waterloo<br>
-					I am in my 3B term <br> 
-					I coach a recreational dragonboat team <br>
-					I have a first dan black belt in Taekwondo <br>
-					I love listening to musicals! <br>
+					I study <span class="pink">Computer Science </span> at the University of Waterloo, and I'm in my 4A term. I love using code to solve tricky problems, or just to create something cool :) On the side I coach the recreational dragonboat team for the university, and listen to lots of broadway musicals!
 					</p>
 				</div>
 			</div>
@@ -50,12 +46,22 @@
 				<p class="text">Here are some things that I'm proud of! </p>
 				<div class="projects">
 					
+					<div class="hoverGrow project">
+            <img src="assets/uwcounter.png" class="opaque projectPic">
+            <div class="projectTitle">UW People Counter</div>
+            <a target="_blank" href="https://github.com/iangitscode/uwaterloo-people-counter">
+              <div class="overlay">
+                A Python service that provides an estimate of the number of people in each building on the University of Waterloo Campus. This is approximated using the number of devices connected to the wireless router for each building.
+              </div>
+            </a>
+          </div>
+
           <div class="hoverGrow project">
             <img src="assets/cah.png" class="opaque projectPic">
             <div class="projectTitle">Cards Against Humanity</div>
             <a target="_blank" href="https://notcardsagainsthumanity.herokuapp.com/">
               <div class="overlay">
-                An online, simple to use Cards Against Humanity game built in Angular and NodeJS. It can run several games concurrently, joinable through a room code. Playable on desktop or mobile, this clone provides easy access to a classic party game. 
+                An online, simple to use Cards Against Humanity game built in Angular and NodeJS. It can run several games concurrently, joinable through a room code. Playable on desktop or mobile, this clone provides easy access to a classic party game.
               </div>
             </a>
           </div>
