--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="hoverGrow project">
             <img src="assets/uwcounter.png" class="opaque projectPic">
             <div class="projectTitle">UW People Counter</div>
-            <a target="_blank" href="https://github.com/iangitscode/uwaterloo-people-counter">
+            <a target="_blank" href="https://ianlai.ca/uwaterloo-people-counter/">
               <div class="overlay">
                 A Python service that provides an estimate of the number of people in each building on the University of Waterloo Campus. This is approximated using the number of devices connected to the wireless router for each building.
               </div>
