Tooltips! And updated resume

--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
 			<div id="contactAnchor" class="contentBox">
 				<p class="text">
-					I'm looking for internships for Summer 2019. If you have work for me, let me know!
+					I'm looking for internships for Fall 2019. If you have work for me, let me know!
 				</p>
 				<div class="contactLinks">
-					<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin.png" class="hoverGrow contactPic"></a>
-		        	<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
-					<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="hoverGrow contactPic"></a>	
-		        	<a href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
+					<a class="tooltip" href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin.png" class="hoverGrow contactPic"><span class="tooltiptext">LinkedIn</span></a>
+		        	<a class="tooltip" href="ian_lai_resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"><span class="tooltiptext">Resume</span></a>
+					<a class="tooltip" href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="hoverGrow contactPic"><span class="tooltiptext">Email</span></a>	
+		        	<a class="tooltip" href="https://github.com/iangitscode" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"><span class="tooltiptext">Github</span></a>
 		        </div>
 			</div>
 		</div>
