--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 			<div id="contactAnchor" class="contentBox">
 				<p class="text">
-					I'm looking for internships for Fall 2019. If you have work for me, let me know!
+					I'm currently interested in fulltime opportunities starting in September. If you have work for me, let me know!
 				</p>
 				<div class="contactLinks">
 					<a class="tooltip" href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin.png" class="hoverGrow contactPic"><span class="tooltiptext">LinkedIn</span></a>
